Fix cramped design in mobile

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   }
 }
 
-@media only screen and (max-height: 700px)  {
+@media only screen and (max-height: 850px)  {
   .main {
     justify-content: center;
   }
